<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="@dimen/button_margin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#141A33"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title_app"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_mono_one"
            android:text="@string/trivia_title_text"
            android:textColor="@color/Text_color1"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.08"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/question_no_text"
            style="@style/MainTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out_of_question"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.211" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="375dp"
            android:layout_height="140dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="#1B213A"
            android:elevation="12dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/question_no_text"
            app:layout_constraintVertical_bias="0.056"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/question_display"
                style="@style/MainTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_margin="@dimen/button_margin"
                android:gravity="center|start"
                android:padding="@dimen/question_text_padding"
                android:text="@string/place_holder"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/button_true"
            style="@style/button_style"
            android:layout_width="0dp"
            android:text="@string/true_button"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintVertical_bias="0.05"
            app:rippleColor="#0091EA"
            app:shapeAppearance="@style/TextAppearance.Compat.Notification.Info" />

        <Button
            android:id="@+id/button_false"
            style="@style/button_style"
            android:layout_width="0dp"
            android:layout_height="62dp"
            android:backgroundTint="#6D101326"
            android:text="@string/false_button"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.842"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true"
            app:layout_constraintVertical_bias="0.04"
            app:rippleColor="#D50000"
            app:shapeAppearance="@style/TextAppearance.AppCompat.SearchResult.Title"
            app:shapeAppearanceOverlay="@style/TextAppearance.Compat.Notification.Line2" />

        <Button
            android:id="@+id/button_next"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.9"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_true"
            app:layout_constraintVertical_bias="0.446" />

        <Button
            android:id="@+id/button_previous"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_next"
            app:layout_constraintHorizontal_bias="0.221"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_false"
            app:layout_constraintVertical_bias="0.129" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>